# Homework_webpython_08

./: README.md  main.py  models.py  pyproject.toml
Part2/: consumer.py  model2.py  producer.py
