[tool.poetry]
name = "homework-webpython-08"
version = "0.1.0"
description = ""
authors = ["Андрій <andrey.maybrodskyy@gmail.com>"]
readme = "README.md"
packages = [{include = "homework_webpython_08"}]

[tool.poetry.dependencies]
python = "^3.10"
pymongo = "^4.3.3"
mongoengine = "^0.27.0"
pika = "^1.3.1"
faker = "^17.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
